<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        android:src="@drawable/add_photo_icon"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.example.mlkitapp.mlkit.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvCardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonCarNumberPlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/tvCardExpiry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCardNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCardNumber"
            app:layout_constraintTop_toTopOf="@id/tvCardNumber" />

        <TextView
            android:id="@+id/tvCardExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/card_expiry"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

        <TextView
            android:id="@+id/tvCardExpiryInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCardExpiry"
            app:layout_constraintTop_toTopOf="@id/tvCardExpiry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvCarNumberPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonCarNumberPlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCarNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCarNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCarNumber"
            app:layout_constraintTop_toTopOf="@id/tvCarNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonCreditCard"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_credit_card"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonCarNumberPlate" />

    <Button
        android:id="@+id/buttonCarNumberPlate"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_car_number"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        app:layout_constraintLeft_toRightOf="@id/buttonCreditCard"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_face" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/find_face_contour_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>